add feed purchase endpoints
